# feral_fotos

./: .gitignore  Dockerfile  README.md  client.service  client.sh  config.py  pyproject.toml
.github/workflows/: cicd.yml
app/: forms.py  routes.py
app/templates/: index.html  success.html
